--- a/style.css
+++ b/style.css
@@ -1,52 +1,60 @@
+body {
+  background-color: #333;
+}
+
 .container {
-    max-width: 500px;
-    margin: 0 auto;
-    text-align: center;
-  }
-  
-  h1 {
-    color: #333;
-  }
-  
-  input[type="text"] {
-    width: 300px;
-    padding: 10px;
-    font-size: 16px;
-  }
-  
-  button {
-    padding: 10px 20px;
-    font-size: 16px;
-    background-color: #333;
-    color: #fff;
-    border: none;
-    cursor: pointer;
-  }
-  
-  #results {
-    margin-top: 20px;
-    text-align: left;
-  }
-  
-  .movie {
-    margin-bottom: 10px;
-    padding: 10px;
-    background-color: #f5f5f5;
-    border-radius: 5px;
-  }
-  
-  .movie img {
-    width: 100px;
-    float: left;
-    margin-right: 10px;
-  }
-  
-  .movie h2 {
-    font-size: 18px;
-    margin-top: 0;
-  }
-  
-  .movie p {
-    margin: 5px 0;
-  }
-  
+  max-width: 500px;
+  margin: 5px auto;
+  padding: 10px;
+  text-align: center;
+  background-color: darkslategray;
+  border-radius: 5px;
+}
+
+h1 {
+  color: black;
+}
+
+input[type="text"] {
+  width: 300px;
+  padding: 10px;
+  font-size: 16px;
+}
+
+button {
+  border-radius: 3px;
+  padding: 10px 20px;
+  font-size: 16px;
+  background-color: black;
+  color: #fff;
+  border: none;
+  cursor: pointer;
+}
+
+#results {
+  margin-top: 20px;
+  text-align: left;
+}
+
+.movie {
+  margin-bottom: 10px;
+  padding: 10px;
+  background-color: #f5f5f5;
+  border-radius: 5px;
+  min-height: 150px;
+}
+
+.movie img {
+  float: left;
+  width: 100px;
+  margin-right: 10px;
+}
+
+.movie h2 {
+  font-size: 18px;
+  margin-top: 0;
+}
+
+.movie p {
+  margin: 5px 0;
+}
